# starkpack-risc0

./: LICENSE  README.md
examples/: Cargo.toml
examples/hello-recursion/: Cargo.toml
examples/hello-recursion/methods/: Cargo.toml
examples/hello-recursion/methods/guest/: Cargo.toml
examples/hello-recursion/src/: main.rs
examples/hello-world/: Cargo.toml  diff.txt  output.txt  ripgrep.txt
examples/hello-world/benches/: hello_bench.rs
examples/hello-world/src/: lib.rs  main.rs
risc0/cargo-risczero/: Cargo.toml
risc0/circuit/rv32im/src/: layout.rs
risc0/zkp/src/prove/: adapter.rs  fri.rs  merkle.rs  poly_group.rs  prover.rs  write_iop.rs
risc0/zkp/src/verify/: fri.rs  merkle.rs  mod.rs  read_iop.rs
risc0/zkvm/: Cargo.toml
risc0/zkvm/src/host/: receipt.rs
risc0/zkvm/src/host/api/: server.rs
risc0/zkvm/src/host/client/prove/: bonsai.rs  external.rs  local.rs  mod.rs
risc0/zkvm/src/host/recursion/: receipt.rs
risc0/zkvm/src/host/server/: mod.rs  packer.rs  session.rs
risc0/zkvm/src/host/server/prove/: dev_mode.rs  loader.rs  mod.rs  prover_impl.rs
