[package]
name = "hello-recursion"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-recursion-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]

